Remove staking proxy
We don't need the proxy anymore since token grants will be staked just as
normal ERC20 tokens on the Token Staking contract.

--- a/docs/rfc/rfc-4-secure-contract-upgrades.adoc
+++ b/docs/rfc/rfc-4-secure-contract-upgrades.adoc
@@ -79,7 +79,7 @@ a newly deployed version.
 === Proof of Concept
 
 The basis for the concept can be seen in the current Staking contracts
-and StakingProxy.sol
+and TokenStaking.sol
 
 
 [bibliography]
