--- a/docs/rfc/rfc-13-continuous-delivery.adoc
+++ b/docs/rfc/rfc-13-continuous-delivery.adoc
@@ -77,7 +77,7 @@ contracts before clients due to client startup behavior.
 [ethereum.ContractAddresses]
   # Hex-encoded address of KeepRandomBeaconOperator contract
   KeepRandomBeaconOperator = "0x6299496449d11141193fdd2d717ef585f431er02"
-  # StakingProxy
+  # TokenStaking
   Staking = "0x6297776199d99942293fdd2d717ef585f431er03"
 
 # Bootstrap node creating a new network.
@@ -104,7 +104,7 @@ contracts before clients due to client startup behavior.
 [ethereum.ContractAddresses]
   # Hex-encoded address of KeepRandomBeaconOperator contract
   KeepRandomBeaconOperator = "0x6299496449d11141193fdd2d717ef585f431er02"
-  # Hex-encoded address of StakingProxy contract
+  # Hex-encoded address of TokenStaking contract
   Staking = "0x6297776199d99942293fdd2d717ef585f431er03"
 
 [LibP2P]
